# web-dashboard

./: .gitignore
local-web-dashboard/: ARCHITECTURE_INDEX.md  MASTER_SESSION_PROMPT.md  README.md  Transactional service boundaries.md  pyproject.toml  webxray_prompt_pack_v3_4_local_layout.md
local-web-dashboard/.obsidian/: graph.json  workspace.json
local-web-dashboard/agent/tests/: __init__.py  executor_contract_support.py  test_agent_admin.py  test_agent_api.py  test_agent_execute_endpoint.py  test_bootstrap.py  test_bootstrap_api.py  test_config_state.py  test_executor_contract.py  test_executor_limits.py  test_executor_safety.py  test_runtime_guardrails.py  test_script_storage.py
local-web-dashboard/agent/webxray_agent/: __init__.py  admin.py  bootstrap.py  config.py  constants.py  executor.py  main.py  (+2 more)
local-web-dashboard/backend/: __init__.py
local-web-dashboard/implementation/: BLOCKING_REQUIREMENTS.md  COMPACT_HANDOFF.md  CONFLICTS.md  CURRENT_STATE.md  DOC_SOURCE_MANIFEST.md  INVARIANTS.md  NEXT_PROMPT.md  OPEN_RISKS.md  PHASE_GATES.md  PROMPT_COVERAGE.md  README.md  TRACEABILITY.md  TRANSACTION_CONTRACT_PLAN.md
local-web-dashboard/scripts/: check_phase_gate.py
local-web-dashboard/Агент/: Принцип работы агента ноды.md  Удаление ноды из дашборда.md  Установка mTLS соединения дашборд - агент.md
local-web-dashboard/Основное/: web-xray-dashboard — Основной дизайн-документ.md  Онбординг ноды в дашборд.md
local-web-dashboard/Скрипты и папки/: Архитектура папок и материализация связей.md  Пайплайны и их архитектура.md  Триггеры запуска скриптов.md
(+104 files in other folders)
