[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "web-xray-dashboard"
version = "0.1.0"
description = "Local web-xray-dashboard mono-repo skeleton."
requires-python = ">=3.12"
dependencies = [
  "aiosqlite",
  "apscheduler",
  "asyncssh",
  "cryptography",
  "fastapi",
  "httpx",
  "sqlalchemy",
  "uvicorn",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "agent",
]
testpaths = [
  "backend/tests",
  "agent/tests",
]
addopts = "-q"

[tool.setuptools.packages.find]
where = [
  ".",
  "agent",
]
include = [
  "backend*",
  "webxray_agent*",
]
